# skanny

./: .gitignore  .tool-versions  LICENSE  README.md  mix.exs  pyproject.toml  template.yaml
assets/: tailwind.config.js
assets/css/: app.css
assets/js/: app.js  hooks.js  uploaders.js
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
deployments/: qa.toml
lambdas/analyze_id/: analyze_id.py
lib/: skanny.ex  skanny_web.ex
lib/skanny/: application.ex  common_utils.ex  mailer.ex  repo.ex
lib/skanny_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
lib/skanny_web/components/: core_components.ex  layouts.ex
lib/skanny_web/components/layouts/: app.html.heex  root.html.heex
lib/skanny_web/controllers/: error_html.ex  error_json.ex  page_controller.ex  page_html.ex
lib/skanny_web/live/: home_live.ex  upload_to_disk_live.ex  upload_to_s3_live.ex
priv/repo/: seeds.exs
priv/static/uploads/: _placeholder
test/: test_helper.exs
test/skanny_web/controllers/: error_html_test.exs  error_json_test.exs  page_controller_test.exs
test/skanny_web/live/: upload_to_s3_live_test.exs
test/support/: conn_case.ex  data_case.ex
