[tool.poetry]
name = "skanny"
version = "0.1.0"
description = "Skanny the AI tool to analyze and extract relevant data from PDF's and images"
authors = ["syepesc <syepesc@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aws-lambda-powertools = "^2.42.0"
pydantic = "^2.8.2"

[tool.poetry.group.dev.dependencies]
boto3 = "^1.34.153"
ruff = "^0.5.6"
cfn-lint = "^1.9.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ANN", "C", "D100", "D104", "D105", "E", "F", "W", "I", "DTZ", "T201"]

[tool.ruff.lint.isort]
known-first-party = [
  "skanny"
]
